tests/architecture/fixtures/valid/composition-root.ts
import { createCommerceServices } from "@nexoraxs/sdk";
export const services = createCommerceServices({ dataSource: "mock" });
