tests/architecture/fixtures/invalid/layer-boundaries/contract-sdk.ts
export { createCommerceServices } from "@nexoraxs/sdk";
